<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_apps"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_invert_selection"
        android:title="@string/invert_selection"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deselect_all"
        android:title="@string/deselect_all"
        app:showAsAction="never" />
</menu>
